@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 14-03-2006 added: more exception handling in dvdplayer and generic exception handling in most threads, onexit will be called on an exception in process
  - 14-03-2006 fixed: some chapters from ogg files may not play
  - 14-03-2006 fixed: mt-daapd 0.2.4 now supported
  - 14-03-2006 fixed: daap now uses mPlayer for playback (faster start time)
